# redline-AI

./: .env.docker  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_REPORT.md  Makefile  README.md  SECURITY.md  deploy-gcp-setup.sh  docker-compose.prod.yml  docker-compose.yml  log.md  package-lock.json  package.json
.context/: AGENT_SYSTEM.md  API_SCHEMAS.md  ARCHITECTURE.md  DATA_MODELS.md  INFRASTRUCTURE.md  KNOWN_ISSUES.md  ML_MODELS.md  PIPELINES.md  README.md
.github/: CODEOWNERS  dependabot.yml
backend/: .dockerignore  Dockerfile  Dockerfile.edge  alembic.ini  docker-entrypoint.sh  gunicorn.conf.py  locustfile.py  mcp_stdio.py  prometheus.yml  pyproject.toml  requirements.txt  simulate_chaos.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_analysis_and_dispatch_tables.py  0001_full_initial_schema.py  0002_add_emergency_calls_and_audit_logs.py  0003_add_performance_indexes.py
backend/app/: main.py  tasks.py  worker.py
backend/app/agents/: base.py
backend/app/agents/dispatch/: dispatch_agent.py  mock_dispatch_agent.py
backend/app/agents/emotion/: emotion_agent.py  mock_emotion_agent.py
backend/app/agents/intent/: intent_agent.py
backend/app/agents/reasoning/: mock_reasoning_agent.py
backend/app/agents/safety/: mock_safety_agent.py
backend/app/agents/severity/: severity_agent.py
backend/app/agents/stt/: mock_stt_agent.py
backend/app/api/: deps.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  calls.py  emergency.py  severity.py  twilio_webhook.py
backend/app/core/: config.py  database.py  event_listener.py  events.py  logging.py  model_downloader.py  orchestrator.py  redis_client.py  security.py  security_headers.py
backend/app/core/memory/: __init__.py  postgres_models.py  redis_client.py
backend/app/core/schemas/: __init__.py  dispatch_report.py  emotion.py  intent.py  reasoning.py  safety.py  severity.py  transcript.py
backend/app/dashboard/: call_store.py  routes.py
backend/app/dashboard/templates/: demo.html  index.html  login.html
backend/app/mcp/: __init__.py  server.py  sse_app.py
backend/app/middleware/: request_id.py  security_headers.py
backend/app/ml/: __init__.py  emotion_model_loader.py  gcs_model_store.py  intent_model_loader.py  mfcc_extractor.py
backend/app/models/: __init__.py  analysis_result.py  audit_log.py  base.py  call.py  dispatch_recommendation.py  emergency_call.py  severity_report.py  tenant.py  user.py
backend/app/plugins/: base.py  registry.py
backend/app/plugins/dispatch/: mock_dispatch.py
backend/app/plugins/emotion/: mock_emotion.py
backend/app/plugins/llm/: mock_llm.py
backend/app/plugins/reasoning/: mock_reasoning.py
backend/app/plugins/safety/: mock_safety.py
backend/app/plugins/severity/: mock_severity.py
backend/app/plugins/stt/: mock_stt.py
backend/app/schemas/: __init__.py  analysis_result.py  audit_log.py  base.py  call.py  dispatch_recommendation.py  severity_report.py  tenant.py  transcript.py  user.py
backend/app/services/: audit_retention.py  audit_service.py  base.py  cache_service.py  call_processing.py  call_service.py  dispatch_service.py  geocoder.py  intent_service.py  ml_client.py  severity_engine.py  severity_service.py  tenant_service.py  translation_service.py  whisper_service.py
backend/app/websockets/: connection_manager.py
backend/grafana/dashboards/: redline-overview.json
backend/grafana/provisioning/alerting/: alerts.yml
backend/grafana/provisioning/dashboards/: dashboard.yml
backend/grafana/provisioning/datasources/: datasource.yml
backend/ml_service/: app.py
backend/tests/: conftest.py  test_agents.py  test_api_auth.py  test_api_calls.py  test_api_contracts.py  test_concurrency.py  test_coverage_boost.py  test_dispatch_agent.py  test_dispatch_service.py  test_edge_cases.py  test_emergency_endpoint.py  test_emotion_agent.py  test_hardening_phase1.py  test_hardening_phase3.py  test_intent_agent.py  test_iteration2.py  test_iteration3.py  test_iteration4.py  test_live_fixes.py  test_load_simulation.py  test_mcp_server.py  test_middleware_coverage.py  test_security.py  test_security_fixes.py  test_severity.py  test_severity_agent.py  test_severity_and_dispatch.py  test_severity_service.py  test_smoke_real_app.py  test_stage2_flow.py  test_zero_coverage.py
backend/tests/e2e/: test_cloud.py  test_cloud_comprehensive.py  test_cloud_load.py  test_dashboard.py
k8s/: celery-worker.yaml  configmap.yaml  deployment.yaml  hpa.yaml  nginx-ingress.yaml  prometheus-alerts.yaml  prometheus-recording-rules.yaml  redis.yaml
ml/: .gitignore  build_accident_dataset.py  build_fire_dataset.py  build_gas_hazard_dataset.py  build_medical_dataset.py  build_mental_health_dataset.py  build_merge_dataset.py  build_non_emergency_dataset.py  build_unknown_dataset.py  build_violent_crime_dataset.py  check.py  check_overlap.py  dataset.py  emotion_cnn_training_colab.ipynb  evaluate_fallback.py  intent_distilbert_training_colab.ipynb  model.py  quantize_onnx.py  test_intent_model.py  train.py  train_emotion_cnn_multidataset.py  train_intent_model.py  utils.py
scripts/: backup-postgres.sh  backup_db.sh  migrate-password-hashes.py  (+1 more)
(+22 files in other folders)
